basic http server worked

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!-- to start the server type this into the terminal -->
+ <!-- python3 -m http.server -->
+
 Hello pedestrian.
+
+<img src="images/R0011977.jpeg">
+
+<style>
+	body {
+		background-color: red;
+	}
+</style>w
